<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tweet_text_dummy">Hoje vou passear ao chiado</string>
    <string name="tweet_user_dummy">UserDummy</string>
    <string name="app_name">NearTweet V0.99</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">Partilha no Twitter</string>
    <string name="error_title">Erro a carregar tweets</string>
    <string name="error_message">Erro</string>
    <string name="send_reply">Enviar</string>
    <string name="no_items">Não há tweets</string>
    <string name="replies">Respostas:</string>
    <string name="localizacao">GPS</string>
    <string name="title_activity_new_tweet_activity2">NewTweetActivity2</string>
    <string name="title_activity_tweet_details">TweetDetailsActivity</string>
    <string name="title_activity_new_tweet_pool">NewTweetPoolActivity</string>
    <string name="add_question">Pergunta:</string>
    <string name="add_option_response">Opcoes de resposta:</string>
    <string name="title_activity_new_comment">NewComment</string>
    <string name="opcoes">Opções:</string>
    <string name="latitude">Lat: </string>
    <string name="longitude">Long: </string>
    <string name="title_activity_tweet_details_pool">TweetDetailsPool</string>
    <string name="spam">spam </string>
    <string name="iamegemTweet">iamegemTweet</string>
    <string name="tweet_Location">At  </string>
    <string name="basic_map">Basic Map</string>
	<string name="handle">Handle</string>
	<string name="picture">Adicionar Foto</string>
	<string name="send">Enviar</string>
	<string name="toggle_gps_id">id</string>
	<string name="toggle_gps">Partilhar Localização</string>
	<string name="attach_url">Adiciar Foto Url</string>
	<string name="enviar_comentario">Enviar Comentário</string>
	<string name="criar_novo_tweet">Criar Novo Tweet</string>
	<string name="criar_novo_tweet_pool">Criar Votações</string>
	<string name="enviar_resposta">Responder</string>
	<string name="enviar_resposta_todos">Responder a Todos</string>
	<string name="partilhar_tweet">Partilhar Twitter</string>
	<string name="new_group">New Group</string>
	<string name="wifi_direct">Wifi Direct</string>
	<string name="group_selection">Group Selection</string>
	
	
</resources>
